RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/12_0004/12_merged.txt
/home/dimpling/AutoSpec/out/12_0004/12_merged.c:36:3: error: unterminated comment
   36 |   /* Loop invariant for the first while loop */;
      |   ^
